# wg-maestro

./: .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  client.yaml  decoder.py  message  run.sh  server.yaml
src/: cli.rs  common.rs  main.rs
src/client/: mod.rs
src/server/: mod.rs
