[package]
name = "wg-maestro"
version = "0.1.0"
authors = ["Oscar Rainford <oscar@fourbs.com.au>"]
edition = "2018"

[dependencies]
# Logging
log = "0.4.8"
pretty_env_logger = "0.4.0"

# CLI and Config Parsing
clap = "3.0.0-beta.1"
serde = { version = "1.0.111", features = ["derive"] }
serde_yaml = "0.8.12"

# Async IO and Error Handling
tokio = { version = "0.2.21", features = ["full"] }
futures = "0.3.5"
async-trait = "0.1.33"
anyhow = "1.0.31"
crossbeam-channel = "0.4.2"

# Wireguard
neli = "0.5.0-rc1"
wireguard-uapi = { path = "./wireguard-uapi-rs/" }
base64 = "0.12.1"
byteorder = "1.3.4"
ipnet = { version = "2.3.0", features = ["serde"] }
# boringtun = "0.3"

# Monitoring, TODO: make this an optional feature
# prometheus = "0.8"

