[package]
name = "wg-maestro"
version = "0.1.0"
authors = ["Oscar Rainford <oscar@fourbs.com.au>"]
edition = "2018"

[dependencies]
# Logging
log = "0.4.11"
pretty_env_logger = "0.4.0"

# CLI and Config Parsing
clap = "3.0.0-beta.2"
serde = { version = "1.0.118", features = ["derive"] }
serde_yaml = "0.8.14"

# Async IO and Error Handling
tokio = { version = "1", features = ["full"] }
futures = "0.3.8"
async-trait = "0.1.42"
anyhow = "1.0.35"
crossbeam-channel = "0.5.0"

# Wireguard
neli = { git = "https://github.com/jbaublitz/neli.git" }
rtnetlink = "*"
wireguard-uapi = "*"
base64 = "0.13.0"
byteorder = "1.3.4"
ipnet = { version = "2.3.0", features = ["serde"] }
ipnetwork = "*"
# boringtun = "0.3"

# Monitoring, TODO: make this an optional feature
# prometheus = "0.8"
